added turn off option and remember settings, compilation on progress

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# PyInstaller
+.blender_render_gui.json
+/build/
+/dist/
+*.spec
+venv/
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
